--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
+<!DOCTYPE html />
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Game | JS</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="/buttons.css">
+    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./buttons.css" />
 </head>
 <body>
     <main id="screen" class="main--vertical">
